--- a/lab1/app/templates/base.html
+++ b/lab1/app/templates/base.html
@@ -50,6 +50,10 @@
         </div>
     </main>
 
+    <div class="footer bg-dark text-white text-center py-3">
+      <p>&copy;Полетаев Владислав 201-352</p>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="{{ url_for('static', filename='main.js') }}" defer></script>
 
