--- a/lab2/app/templates/base.html
+++ b/lab2/app/templates/base.html
@@ -38,6 +38,12 @@
                   <li class="nav-item">
                     <a class="nav-link {% if request.endpoint == 'cookies' %}active{% endif %}" aria-current="page" href="{{ url_for('cookies') }}">Cookies</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link {% if request.endpoint == 'form' %}active{% endif %}" aria-current="page" href="{{ url_for('form') }}">Параметры формы</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link {% if request.endpoint == 'tnum' %}active{% endif %}" aria-current="page" href="{{ url_for('tnum') }}">Проверка номера телефона</a>
+                  </li>
                 </ul>
               </div>
             </div>
@@ -49,6 +55,7 @@
             {% block content %}
                 <h1>Содержимое по умолчанию</h1>
             {% endblock %}
+            
         </div>
     </main>
 
