--- a/lab2/app/templates/tnum.html
+++ b/lab2/app/templates/tnum.html
@@ -8,6 +8,6 @@
         </div>
     </form>
     {% if msg %}
-        <p class="mt-3 fs-4 text-center {# msg_color #}">{{ msg }}</p>
+        <p class="mt-3 fs-4 text-center {{ msg_color }}">{{ msg }}</p>
     {% endif %}
 {% endblock %}
