--- a/lab1/app/templates/post.html
+++ b/lab1/app/templates/post.html
@@ -23,13 +23,12 @@
         <div class="border p-3">
             <textarea class="form-control" id="form" rows="3"></textarea>
             <input class="btn btn-primary mt-3" type="submit" value="Отправить">
-        </div>
-            
+        </div>   
     </div>
 
     <div class="d-flex py-3">
         <div class="flex-shrink-0">
-            <img src="../static/images/avatar.jpg" class="rounded-circle img-com" alt="Sample Image">
+            <img src="{{ url_for('static', filename='images/avatar.jpg') }}" class="rounded-circle img-com" alt="Sample Image">
         </div>
         <div class="flex-grow-1 ms-3">
             <h5>Jhon Carter <small class="text-muted"><i>Posted on January 10, 2021</i></small></h5>
@@ -38,7 +37,7 @@
             <!-- Nested media object -->
             <div class="d-flex mt-4">
                 <div class="flex-shrink-0">
-                    <img src="../static/images/avatar.jpg" class="rounded-circle img-com" alt="Sample Image">
+                    <img src="{{ url_for('static', filename='images/avatar.jpg') }}" class="rounded-circle img-com" alt="Sample Image">
                 </div>
                 <div class="flex-grow-1 ms-3">
                     <h5>Clark Kent <small class="text-muted"><i>Posted on January 12, 2021</i></small></h5>
