--- a/Exam/app/templates/auth/login.html
+++ b/Exam/app/templates/auth/login.html
@@ -2,8 +2,7 @@
 
 {% block content %}
 <div class="d-flex h-100 bg-light">
-    <form class="container-fluid m-auto bg-white p-5 border border-dark rounded" method="POST" style="max-width: 30rem;">
-        <h2 class="text-center mb-3">Авторизация</h2>
+    <form class="container-fluid m-auto bg-white p-5 border round" method="POST" style="max-width: 30rem;">
         <div class="form-floating mb-3">
             <input autocomplete="off" type="text" class="form-control" name="login" id="login" placeholder="login"
                 value="{{ request.form.login }}" required>
@@ -23,6 +22,9 @@
                         Запомнить меня
                     </label>
                 </div>
+            </div>
+            <div class="col-auto">
+                <a href="#">Забыли пароль?</a>
             </div>
         </div>
     
