--- a/Exam/app/templates/index.html
+++ b/Exam/app/templates/index.html
@@ -11,7 +11,7 @@
             </p>
 
             <div class="my-5 p-3 bg-dark rounded">
-                <form action="{# url_for('books.index') #}" class="row align-items-center">
+                <form action="{{ url_for('books.index') }}" class="row align-items-center">
                     <div class="col-sm-12 mb-3 col-md-6 mb-md-0">
                         <input autocomplete="off" type="text" class="form-control" id="book-name" name="name" placeholder="Название книги">
                     </div>
