--- a/Exam/app/templates/base.html
+++ b/Exam/app/templates/base.html
@@ -67,6 +67,7 @@
         crossorigin="anonymous"></script>
 
     <script defer src="{{ url_for('static', filename='main.js') }}"></script>
+    <script defer src="{{ url_for('static', filename='delete.js') }}"></script>
 </body>
 
 </html>
